fixed alignment of instance view selection icons

--- a/ui/static/main.css
+++ b/ui/static/main.css
@@ -643,8 +643,8 @@ div#view-select {
     float: right;
     clear: both;
     color: white;
-    margin-top: -62px;
-    margin-right: -70px;
+    margin-top: -70px;
+    margin-right: -36px;
     font-size: 9pt;
     background-color: #87aade;
     padding: 5px 10px;
